# Clightd

./: .build.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  makefile
.github/workflows/: ci.yaml  codeql.yaml
Arch/: PKGBUILD
DEBIAN/: control
Debian/: clightd_0.9_amd64.deb
Scripts/: clightd.service  i2c_clightd.conf  org.clightd.backlight.policy  org.clightd.backlight.service  org.clightd.clightd.conf  org.clightd.clightd.policy  org.clightd.clightd.service
cmake/modules/: WaylandProtocols.cmake
inc/: als.h  backlight.h  camera.h  commons.h  dpms.h  gamma.h  idle.h  polkit.h  sensor.h  udev.h
protocol/: CMakeLists.txt  org_kde_kwin_dpms.xml  wlr-output-power-management-unstable-v1.xml
src/: als.c  backlight.c  camera.c  clightd.c  commons.h  dpms.c  gamma.c  idle.c  main.c  modules.c  modules.h  polkit.c  sensor.c  sensor.h  udev.c
src/bus/: backlight.c  backlight.h  dpms.c  dpms.h  gamma.c  gamma.h  idle.c  idle.h
src/modules/: backlight.c  backlight.h  backlight2.c  bus.c  dpms.c  dpms.h  gamma.c  gamma.h  idle.c  keyboard.c  screen.c  screen.h  sensor.c  sensor.h  signal.c
src/modules/backlight_plugins/: ddc.c  sysfs.c
src/modules/dpms_plugins/: drm.c  drm.h  kwin_wl.c  tty.c  tty.h  wl.c  wl.h  xorg.c  xorg.h
src/modules/gamma_plugins/: drm.c  drm.h  kwin_wl.c  utils.c  utils.h  wl.c  wl.h  xorg.c  xorg.h
src/modules/screen_plugins/: fb.c  wl.c  xorg.c
src/modules/sensors/: als.c  als.h  camera.c  camera.h  custom.c  pipewire.c  yoctolight.c
src/sensors/: als.c  camera.c
src/utils/: bus_utils.c  bus_utils.h  drm_utils.c  drm_utils.h  polkit.c  polkit.h  privilege.c  privilege.h  udev.c  udev.h  wl_utils.c  wl_utils.h  xorg_utils.c  xorg_utils.h
